--- a/styles/style.css
+++ b/styles/style.css
@@ -70,45 +70,43 @@ nav li a {
 
 /* banner styles */
 .banner {
-  border: 2px solid tomato;
-  background-image: url("/Images/Group\ 13\ \(1\)\ \(1\).png");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(
+      180deg,
+      rgba(19, 19, 24, 0.8) 0%,
+      rgba(19, 19, 24, 0) 100%
+    ),
+    url("/Images/Group\ 13\ \(1\)\ \(1\).png");
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 16px;
-  width: 956px;
+  width: 959px;
   height: 500px;
-
-  /* background: linear-gradient(
-    180deg,
-    rgba(19, 19, 24, 0.8) 0%,
-    rgba(19, 19, 24, 0) 100%
-  ); */
 }
 
 .banner-content {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
   text-align: center;
-  padding: 50px 0;
+  max-width: 768px;
+  border: 2px solid tomato;
 }
 
 .banner-content h1 {
   color: var(--white);
   font-size: 4rem;
   font-weight: 800;
+  margin: 0;
 }
 
 .banner-content p {
   color: var(--white);
   max-width: 600px;
-  padding: 0 180px;
-  margin-bottom: 50px;
+  margin: 40px auto;
 }
 
 .input-portion input[type="text"] {
-  padding: 15px 0 15px 15px;
+  padding-left: 15px;
   border-radius: 8px;
   border: none;
 }
@@ -117,14 +115,24 @@ nav li a {
   display: flex;
   justify-content: center;
   gap: 20px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.3);
+  padding: 15px;
 }
 
 #find-now-btn {
   font-size: 16px;
   font-weight: 700;
-  padding: 14px 35px;
+  padding: 15px;
   position: relative;
-  top: 2px;
+  top: 0px;
+}
+
+#find-now-btn span {
+  position: relative;
+  top: -5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* popular tours styles */
@@ -159,10 +167,6 @@ nav li a {
 
 /* destination styles */
 
-.destination-container {
-  border: 2px solid tomato;
-}
-
 .destination-content {
   text-align: center;
 }
@@ -178,6 +182,112 @@ nav li a {
   max-width: 600px;
   padding: 0 180px;
   margin-bottom: 50px;
+}
+
+.row-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
+}
+
+.box-1,
+.box-2 {
+  width: 464px;
+  height: 243px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-3,
+.box-4,
+.box-5,
+.box-6,
+.box-7 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-1 h3,
+.box-2 h3,
+.box-3 h3,
+.box-4 h3,
+.box-5 h3,
+.box-6 h3,
+.box-7 h3 {
+  color: var(--white);
+}
+
+.box-1 {
+  background: url("/Images/Rectangle\ 5.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.box-2 {
+  background: url("/Images/Rectangle\ 8.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.row-2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 48px;
+  margin: 20px 0;
+}
+
+.box-3 {
+  background: url("/Images/Rectangle\ 6.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 288px;
+}
+
+.box-4 {
+  background: url("/Images/Rectangle\ 7.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 365px;
+}
+
+.box-5 {
+  background: url("/Images/Rectangle\ 9.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 211px;
+}
+
+.row-3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.box-6 {
+  background: url("/Images/Rectangle\ 11.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 383px;
+}
+
+.box-7 {
+  background: url("/Images/Rectangle\ 10.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 546px;
+}
+
+.box-3,
+.box-4,
+.box-5 {
+  height: 220px;
+}
+
+.box-6,
+.box-7 {
+  height: 243px;
 }
 
 /* ----------------------------------------------------------------------------------------------------------------- */
