why choose us section finished

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  margin: 0 150px;
+  margin: 0px 150px;
   font-family: "Mulish", sans-serif;
   border: 2px solid;
 }
@@ -40,7 +40,23 @@ nav {
   justify-content: space-between;
 }
 
-nav h2 {
+nav i.fa-solid.fa-bars {
+  display: none;
+}
+
+.logo {
+  display: flex;
+}
+
+.logo img {
+  width: 56px;
+  height: 48px;
+  position: relative;
+  top: 30px;
+  margin-right: 15px;
+}
+
+.logo h2 {
   color: var(--dark-01);
   font-size: 2.2rem;
   font-weight: 800;
@@ -120,6 +136,12 @@ nav li a {
   padding: 15px;
 }
 
+.input-portion select {
+  padding: 15px 0 15px 15px;
+  border-radius: 8px;
+  border: none;
+}
+
 #find-now-btn {
   font-size: 16px;
   font-weight: 700;
@@ -185,15 +207,17 @@ nav li a {
 }
 
 .row-1 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  /* grid-template-columns: repeat(2, 1fr); */
   gap: 32px;
 }
 
 .box-1,
 .box-2 {
-  width: 464px;
-  height: 243px;
+  width: 50%;
+  height: 50%;
+  /* width: 464px;
+  height: 243px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -290,6 +314,65 @@ nav li a {
   height: 243px;
 }
 
+.box-1,
+.box-2 {
+  border: 2px solid tomato;
+}
+
+/* why choose styles */
+
+.why-choose-content h2 {
+  color: var(--dark-01);
+  font-weight: 800;
+  font-size: 2.4rem;
+  text-align: center;
+}
+
+.why-choose-content p {
+  color: var(--dark-02);
+  max-width: 600px;
+  padding: 0 180px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.card-container {
+  border: 2px solid tomato;
+}
+
+.card-row-1 {
+  display: flex;
+  margin-bottom: 2%;
+}
+
+.card-1 {
+  border-radius: 16px;
+  border: 1px solid rgba(251, 181, 99, 0.2);
+  background: rgba(251, 181, 99, 0.05);
+  padding: 30px 45px 30px 30px;
+  margin-right: 2%;
+}
+
+.card-2 {
+  border-radius: 16px;
+  border: 1px solid rgba(41, 206, 246, 0.2);
+  background: rgba(41, 206, 246, 0.05);
+  padding: 30px 45px 30px 30px;
+}
+
+.card-row-2 {
+  display: flex;
+  justify-content: center;
+}
+
+.card-3 {
+  border-radius: 16px;
+  border: 1px solid rgba(233, 68, 68, 0.2);
+  background: rgba(233, 68, 68, 0.05);
+  padding: 30px 45px 30px 30px;
+  width: 41%;
+}
+
 /* ----------------------------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 600px) {
@@ -297,31 +380,47 @@ nav li a {
     margin: 0 50px;
   }
 
+  nav {
+    align-items: center;
+    padding-right: 2%;
+  }
+
+  nav i {
+    font-size: 1.5rem;
+  }
+
   nav ul {
     display: none;
   }
 
   .banner {
-    width: 305px;
-    height: 500px;
-    background-repeat: no-repeat;
-  }
-
-  .banner-content h1 {
-    font-size: 1.6rem;
+    width: 100%;
+    height: 100%;
   }
 
   .banner-content {
-    padding: 30px 0;
+    padding: 32px 0;
+  }
+
+  .banner-content h1 {
+    font-size: 2rem;
   }
 
   .banner-content p {
-    padding: 0 25px;
+    padding: 0 40px;
+    margin: 20px 0 30px 0;
   }
 
   .input-portion {
     flex-direction: column;
-    padding: 0 50px;
+    margin: 0 50px;
+  }
+
+  .input-portion input[type="text"] {
+    padding: 15px 0 15px 15px;
+
+    border-radius: 8px;
+    border: none;
   }
 
   .popular-tours {
@@ -330,7 +429,51 @@ nav li a {
   }
 
   .popular-tours-img img {
-    width: 310px;
-    height: 342px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .popular-tours-content h2,
+  .destination-content h2,
+  .why-choose-content h2 {
+    font-size: 2rem;
+  }
+
+  .destination-content p,
+  .why-choose-content p {
+    padding: 0 56px;
+  }
+
+  .row-1 {
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .box-1,
+  .box-2 {
+    width: 491px;
+    height: 258px;
+  }
+
+  .destination-img-container {
+    display: none;
+  }
+
+  .card-row-1 {
+    flex-direction: column;
+    margin-bottom: 5%;
+  }
+
+  .card-1 {
+    padding: 30px 20px 30px 30px;
+    margin-bottom: 5%;
+  }
+
+  .card-2 {
+    padding: 30px 20px 30px 30px;
+  }
+
+  .card-3 {
+    width: 100%;
   }
 }
