--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ section {
 .btn-primary {
   padding: 15px 35px;
   color: var(--white);
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 700;
   background-color: var(--orange);
   border: none;
@@ -38,10 +38,6 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-}
-
-nav i.fa-solid.fa-bars {
-  display: none;
 }
 
 .logo {
@@ -373,6 +369,76 @@ nav li a {
   width: 41%;
 }
 
+/* newsletter styles */
+
+.newsletter {
+  display: flex;
+}
+
+.newsletter-form {
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+  padding: 40px;
+  margin-right: 2%;
+}
+
+.newsletter-form h3 {
+  color: var(--dark-01);
+  font-size: 1.5rem;
+  font-weight: 800;
+  margin-top: 0;
+}
+
+.newsletter-form p {
+  color: var(--dark-02);
+}
+
+hr {
+  margin: 20px 0;
+  border: 1px solid rgba(19, 19, 24, 0.1);
+}
+
+.news-form-potion {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.news-form-potion input {
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  padding: 15px;
+  border: none;
+}
+
+.newsletter-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.voucher {
+  padding: 0 35px;
+  color: var(--white);
+  background-color: var(--orange);
+  border: none;
+  border-radius: 8px;
+  text-align: center;
+  position: absolute;
+  margin-top: -13.7%;
+  margin-left: 16.9%;
+  transform: rotate(-20deg);
+}
+
+.voucher h2 {
+  margin-top: 0;
+  font-size: 2rem;
+}
+
+.voucher p {
+  margin-bottom: 0;
+  font-size: 1.5rem;
+}
+
 /* ----------------------------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 600px) {
@@ -475,5 +541,33 @@ nav li a {
 
   .card-3 {
     width: 100%;
+  }
+
+  .newsletter {
+    flex-direction: column;
+  }
+
+  .newsletter-form {
+    margin-right: 0;
+    margin-bottom: 3%;
+  }
+
+  .voucher h2 {
+    font-size: 1.3rem;
+  }
+
+  .voucher p {
+    font-size: 16px;
+  }
+
+  .voucher {
+    margin-top: -20.2%;
+    margin-left: 42.8%;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1440px) {
+  nav i.fa-solid.fa-bars {
+    display: none;
   }
 }
