--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,6 @@ nav li a {
 .banner-content {
   text-align: center;
   max-width: 768px;
-  border: 2px solid tomato;
 }
 
 .banner-content h1 {
@@ -133,7 +132,7 @@ nav li a {
 }
 
 .input-portion select {
-  padding: 15px 0 15px 15px;
+  padding: 15px 70px 15px 15px;
   border-radius: 8px;
   border: none;
 }
@@ -312,7 +311,6 @@ nav li a {
 
 .box-1,
 .box-2 {
-  border: 2px solid tomato;
 }
 
 /* why choose styles */
@@ -333,7 +331,6 @@ nav li a {
 }
 
 .card-container {
-  border: 2px solid tomato;
 }
 
 .card-row-1 {
@@ -437,6 +434,64 @@ hr {
 .voucher p {
   margin-bottom: 0;
   font-size: 1.5rem;
+}
+
+/* footer styles */
+
+footer {
+  background: rgba(19, 19, 24, 0.05);
+}
+
+.footer-content {
+  margin: 0 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer-logo {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-logo img {
+  width: 56px;
+  height: 48px;
+  position: relative;
+  top: 30px;
+  margin-right: 15px;
+}
+
+.footer-logo h2 {
+  color: var(--dark-01);
+  font-size: 2.2rem;
+  font-weight: 800;
+  margin-bottom: 10px;
+}
+
+.footer-text {
+  color: var(--dark-02);
+  max-width: 600px;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.footer-content ul {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+
+.footer-content ul li {
+  list-style: none;
+}
+
+.footer-content ul li a {
+  color: var(--dark-01);
+}
+
+.copyright-text {
+  text-align: center;
 }
 
 /* ----------------------------------------------------------------------------------------------------------------- */
@@ -563,6 +618,10 @@ hr {
   .voucher {
     margin-top: -20.2%;
     margin-left: 42.8%;
+  }
+
+  .footer-content {
+    margin: 0 20px;
   }
 }
 
