--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,14 @@
 }
 
 body {
-  margin: 0px 150px;
+  margin: 0;
+
   font-family: "Mulish", sans-serif;
+}
+
+header,
+section {
+  margin: 0px 150px;
   border: 2px solid;
 }
 
@@ -440,10 +446,11 @@ hr {
 
 footer {
   background: rgba(19, 19, 24, 0.05);
+  margin: 0 0;
 }
 
 .footer-content {
-  margin: 0 200px;
+  padding: 50px 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -472,7 +479,8 @@ footer {
 .footer-text {
   color: var(--dark-02);
   max-width: 600px;
-  padding: 0 20px;
+  padding: 20px;
+  margin: auto;
   text-align: center;
 }
 
