--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@
 
 body {
   margin: 0;
-
   font-family: "Mulish", sans-serif;
 }
 
@@ -209,16 +208,13 @@ nav li a {
 
 .row-1 {
   display: flex;
-  /* grid-template-columns: repeat(2, 1fr); */
   gap: 32px;
 }
 
 .box-1,
 .box-2 {
-  width: 50%;
-  height: 50%;
-  /* width: 464px;
-  height: 243px; */
+  width: 464px;
+  height: 243px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -257,10 +253,11 @@ nav li a {
 }
 
 .row-2 {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
   gap: 48px;
   margin: 20px 0;
+  justify-content: center;
+  align-items: center;
 }
 
 .box-3 {
@@ -285,9 +282,8 @@ nav li a {
 }
 
 .row-3 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  display: flex;
+  gap: 30px;
 }
 
 .box-6 {
@@ -505,8 +501,13 @@ footer {
 /* ----------------------------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 600px) {
-  body {
+  /* body {
     margin: 0 50px;
+  } */
+
+  header,
+  section {
+    margin: 0px 30px;
   }
 
   nav {
@@ -580,12 +581,69 @@ footer {
 
   .box-1,
   .box-2 {
-    width: 491px;
-    height: 258px;
+    width: 100%;
+    border-radius: 16px;
   }
 
-  .destination-img-container {
-    display: none;
+  .box-1 {
+    background: url("/Images/Rectangle\ 5.png");
+    background-size: cover;
+  }
+
+  .box-2 {
+    background: url("/Images/Rectangle\ 8.png");
+    background-size: cover;
+  }
+
+  .row-2 {
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .box-3,
+  .box-4,
+  .box-5 {
+    width: 100%;
+    border-radius: 16px;
+  }
+
+  .box-3 {
+    background: url("/Images/Rectangle\ 6.png");
+    background-size: cover;
+  }
+
+  .box-4 {
+    background: url("/Images/Rectangle\ 7.png");
+    background-size: cover;
+  }
+
+  .box-5 {
+    background: url("/Images/Rectangle\ 9.png");
+    background-size: cover;
+    background-position: center;
+  }
+
+  .row-3 {
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .box-6,
+  .box-7 {
+    width: 100%;
+    border-radius: 16px;
+  }
+
+  .box-6 {
+    background: url("/Images/Rectangle\ 11.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .box-7 {
+    background: url("/Images/Rectangle\ 10.png");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .card-row-1 {
